cluster/core/tools/minio/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: minio-ingress
  namespace: tools
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: minio
          namespace: tools
          port: 9001
          scheme: http
    - match: Host(`s3.${SECRET_DOMAIN}`)
      kind: Rule
      services:
        - name: minio
          namespace: tools
          port: 9000
  tls:
    secretName: "minio-${SECRET_DOMAIN/./-}-tls"
